# flavortown-studenttrack

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  startprod.sh  updateprod.sh
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_scheduleslot_unique_together.py  0003_alter_scheduleslot_subject.py  0004_pendingwork.py  0005_pendingwork_completed.py  0006_alter_scheduleslot_subject.py
app/templates/cotton/alert/: danger.html  debug.html  info.html  success.html  warning.html
app/templates/dashboard/: index.html  new_task.html
app/templates/routine/: edit.html
common/: admin.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py
common/templates/: base.html  login.html  register.html
mysite/: settings.py  urls.py
tailwindcsstheme/static_src/: package-lock.json  package.json
tailwindcsstheme/static_src/src/: styles.css
