[project]
name = "studenttrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-humanize>=0.1.2",
    "django-pwa>=2.0.1",
    "django-tailwind>=4.4.2",
    "djlint>=1.36.4",
    "honcho>=2.0.0",
    "python-dotenv>=1.2.1",
]
